--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@tensorflow-models/universal-sentence-encoder": "^1.3.2",
     "@tensorflow/tfjs-node": "^2.8.3",
+    "@tensorflow/tfjs-node-gpu": "^2.8.3",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
