--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           command: npm run lint
       - run:
           name: test
-          command: npm run test
+          command: npm run test:ci
       - run:
           name: release
           command: npx semantic-release || true
