chore(root): Update docker env to use local model

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ jobs:
   build:
     docker:
       - image: 'circleci/node:latest'
+        environment:
+          MODEL_URL: file://~/project/model/model.json
     steps:
       - setup_remote_docker
       - run:
