--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: 'circleci/node:latest'
         environment:
-          MODEL_URL: file://~/project/model/model.json
+          MODEL_URL: file://model/model.json
     steps:
       - setup_remote_docker
       - run:
