--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@tensorflow/tfjs-node-gpu": "^2.8.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "p-queue": "^6.6.2"
   },
   "devDependencies": {
     "@semantic-release/exec": "^5.0.0",
