--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,10 @@ jobs:
       - image: 'circleci/node:latest'
         environment:
           MODEL_URL: file://model/model.json
+          DOCKER_CLI_EXPERIMENTAL: enabled
     steps:
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: 20.10.11
       - run:
           name: docker-login
           command: echo "$DOCKER_PAT" | docker login --username $DOCKER_USER --password-stdin
