--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,12 @@ jobs:
           name: test
           command: npm run test:ci
       - run:
-          name: release
-          command: npx semantic-release || true
+          name: trybuildx
+          command: ./scripts/circleci_buildx.sh
           no_output_timeout: 20m
+      #- run:
+          #name: release
+          #command: npx semantic-release || true
+          #no_output_timeout: 20m
     # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
     resource_class: large
