--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           no_output_timeout: 20m
       #- run:
           #name: release
-          #command: npx semantic-release || true
+          #command: npx semantic-release
           #no_output_timeout: 20m
     # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
     resource_class: large
