--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,12 +24,8 @@ jobs:
           name: test
           command: npm run test:ci
       - run:
-          name: trybuildx
-          command: ./scripts/circleci_buildx.sh
+          name: release
+          command: npx semantic-release
           no_output_timeout: 20m
-      #- run:
-          #name: release
-          #command: npx semantic-release
-          #no_output_timeout: 20m
     # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
     resource_class: large
